--- a/src/Frontend/MyShop-Frontend/MyShop-Frontend.csproj
+++ b/src/Frontend/MyShop-Frontend/MyShop-Frontend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
@@ -13,9 +13,18 @@
     <EnableMsixTooling>true</EnableMsixTooling>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Remove="Assets\download.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Assets\LoginImage.jpg" />
+    <None Remove="Views\Pages\LoginPage.xaml" />
+  </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Assets\SplashScreen.scale-200.png" />
+    <Content Include="Assets\SplashScreen.scale-200.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.scale-200.png" />
@@ -50,13 +59,15 @@
     <Folder Include="Helpers\Extensions\" />
     <Folder Include="Models\Auth\" />
     <Folder Include="Servies\" />
-    <Folder Include="ViewModels\Base\" />
-    <Folder Include="ViewModels\Authentication\" />
     <Folder Include="ViewModels\Dashboard\" />
     <Folder Include="ViewModels\Orders\" />
     <Folder Include="ViewModels\Products\" />
     <Folder Include="Views\Controls\" />
-    <Folder Include="Views\Pages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\Pages\LoginPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <!--
