--- a/src/Frontend/MyShop-Frontend/Properties/launchSettings.json
+++ b/src/Frontend/MyShop-Frontend/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "MyShop-Frontend (Package)": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
+      "nativeDebugging": true
     },
     "MyShop-Frontend (Unpackaged)": {
       "commandName": "Project"
