Fix Frontend startup crash, missing assets, and server config issues

--- a/src/Backend/MyShop.Presentation/appsettings.json
+++ b/src/Backend/MyShop.Presentation/appsettings.json
@@ -7,5 +7,12 @@
     "Issuer": "MyShopAPI",
     "Audience": "MyShopClient",
     "ExpirationMinutes": 60
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5126"
+      }
+    }
   }
 }
